--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,12 @@
 /* src/styles.css */
-body {
+#root {
   margin: 0;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  
 }
 
 h4 {
